test/ill-formed/0074_pointer_in_separate_struct_in_struct.c
typedef struct {
  char *s;
} str;
typedef struct {
  double x, y;
  str label;
} labeled_point;

void f (labeled_point p) {}
